--- a/resume/index.html
+++ b/resume/index.html
@@ -6,7 +6,7 @@
           content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no,viewport-fit=cover">
     <title>喻衡深的简历</title>
     <script src="//at.alicdn.com/t/font_1685945_lb2r5jqn7h8.js"></script>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
 <div class="wrapper">
@@ -117,6 +117,6 @@
     </section>
 </div>
 <script src="https://cdn.bootcss.com/echarts/4.6.0/echarts.min.js"></script>
-<script src="index.js"></script>
+<script src="./index.js"></script>
 </body>
 </html>
