--- a/resume/index.html
+++ b/resume/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no,viewport-fit=cover">
-    <title>喻衡深的简历</title>
+    <title>喻衡深-web前端开发</title>
     <script src="//at.alicdn.com/t/font_1685945_lb2r5jqn7h8.js"></script>
     <link rel="stylesheet" href="./style.css">
 </head>
@@ -23,7 +23,7 @@
             <div class="pc" style="flex: 1;margin-left: 2rem">
                 <div class="info__item"><span>电话：18328075041</span><span>邮箱：<a href="mailto:hengshenyu@gmail.com">hengshenyu@gmail.com</a></span>
                     <span>地址：四川自贡</span></div>
-                <div class="info__item"><span>年龄：24岁</span><span>性别：男</span><span>求职方向：Web前端开发</span></div>
+                <div class="info__item"><span>年龄：24岁</span><span>性别：男</span><span>求职方向：web前端开发</span></div>
             </div>
             <div class="mobile">
                 <span>18328075041 | </span><span>hengshenyu@gmail.com | </span><span>四川自贡 | </span><span>24岁 | </span><span>男 | </span><span>Web前端开发</span>
@@ -51,14 +51,13 @@
             <h4>道云文件（PC端）</h4>
             <p class="content">
                 这是一款基于<strong>vue</strong>、<strong>element-ui</strong>、<strong>axios</strong>、<strong>jsonwebtoken</strong>和<strong>webpack</strong>开发的企业文件管理和会议记录存储的后台应用。主要设计实现了文件组件树、全局对话、ContextMenu等组件。<br/>
-                设计了完备的用户权限角色路由表，管理员可动态修改用户权限，通过添加axios拦截器，为每次异步请求添加自定义authorization头部信息。针对云端存储大体积的视频、音频或其他会议文件的需求，采用blob
-                slice做文件分段上传和断点续传，并配合使用promise做并发池优化上传体验。使用babel-plugin-component对element-ui做按需导入和tree-shaking，对非首屏chunk做异步引入并使用prefetch提升源文件加载速度。<br/>
-                该项目的编写过程中，使我对vue的使用逐渐熟练，并在对部分vue源码的debug中，加深了对其实现原理的理解。
+                设计了完善的用户权限角色路由表，管理员可动态修改用户角色以管理权限，通过添加axios拦截器，为每次异步请求添加自定义auth头部信息。针对云端存储大体积的视频、音频或其他会议文件的需求，采用<code>blob slice</code>做文件分段上传和断点续传，并配合使用Promise做并发池优化上传体验。使用<code>babel-plugin-component</code>对element-ui做按需导入和<code>tree-shaking</code>，使用<code>dynamic import</code>对非首屏chunk做异步引入同时添加<code>prefetch</code>提升源文件加载速度。对公共文件使用CDN减少服务器负载。<br/>
+                该项目的编写过程中，我对vue的使用逐渐熟练，并在对部分vue源码的debug中，加深了对其实现原理的理解。
             </p>
             <h3>YD-英语口语（小程序端）</h3>
             <p class="content">
                 这是一款英语短视频的在线教育应用的<strong>微信小程序</strong>端。<br/>
-                作为App的引流端，仅包含了关键的功能服务，首先通过openid和session_key管理用户的登录状态，并通过请求授权获取用户手机号与App端的账户进行关联和同步。主要页面包含Feed流、用户信息、视频详情、评论、打卡、单词卡片等。其他功能还包括有字幕和关键单词的同步管理、新单词突出显示并可添加云收藏和在字幕内定位、通过调用微信平台原生接口，实现音频评论和口语发音评分等。
+                作为App的引流端，仅包含了关键的功能服务，首先通过<code>openid</code>和<code>session_key</code>管理用户的登录状态，并通过请求授权获取用户手机号与App端的账户进行关联和同步。主要页面包含Feed流、用户信息、视频详情、评论、打卡、单词卡片等。其他功能还包括有字幕和关键单词的同步管理、新单词突出显示并可添加云收藏和在字幕内定位、通过调用微信平台原生接口，实现音频评论和口语发音评分等。
             </p>
         </div>
     </section>
@@ -72,13 +71,12 @@
         <div style="margin-left: 2rem">
             <h2>redux-music-widget <span class="left">2020年1月-2020年2月</span></h2>
             <p>这是一款基于<strong>react</strong>和<strong>typescript</strong>的音乐播放组件，是我为个人博客所设计。<br/>
-                功能包含了歌词获取、播放控制、歌词控制等常用功能，并可通过拖动文件和外链两种方式进行播放。项目中大量使用react
-                hooks，并将“拖动”，“隐藏”等副作用（特效）封装为自定义hooks。该项目是我对react hooks及其相关内容的实践，让我对hooks有了深刻的理解和应用。该项目同时也使用了<strong>animejs</strong>来管理动画，与animation.css配合使用，即可轻松编写出高质量的动画特效。<br/>
+                功能包含了歌词获取、播放控制、歌词控制等常用功能，并可通过拖动文件和外链两种方式进行播放。项目中大量使用<code>react hooks</code>，并将“拖动”，“隐藏”等副作用（特效）封装为自定义hooks。该项目是我对<code>react hooks</code>及其相关内容的实践，让我对hooks有了深刻的理解和应用。该项目同时也使用了<strong>animejs</strong>来管理动画，与<strong>animation.css</strong>配合使用，即可轻松编写出高质量的动画特效。<br/>
                 项目地址：<a href="https://github.com/yuhengshen/react-music-widget">https://github.com/yuhengshen/react-music-widget</a>。
             </p>
-            <h2>现代 JavaScript 教程 <span class="left">2020年3月-2020年3月</span></h2>
+            <h2>现代JavaScript教程 <span class="left">2020年3月-2020年3月</span></h2>
             <p>
-                参与了<a href="https://zh.javascript.info">《现代 JavaScript 教程》</a>的翻译。
+                参与了<a href="https://zh.javascript.info">《现代JavaScript教程》</a>的翻译。
             </p>
         </div>
     </section>
@@ -91,14 +89,14 @@
         </h1>
         <div class="skills__wrapper">
             <ul>
-                <li>基础技能：熟练掌握 ES6，HTML5，CSS3。对JS闭包、原型、回调、异步、面向对象有充分的认识，能依据设计稿精确还原页面，对前端优化有一定见解。</li>
+                <li>基础技能：熟练掌握ES6，HTML5，CSS3。对JS闭包、原型、回调、异步、面向对象有充分的认识，能依据设计稿精确还原页面，对前端优化有一定见解。</li>
                 <li>
                     前端框架：熟练应用<strong>vue</strong>及相关生态，了解虚拟DOM、数据动态响应、生命周期等关键原理，能开发高通用的vue组件；熟悉react+<strong>typescript</strong>组合开发。
                 </li>
                 <li>依赖工具：熟悉<strong>webpack</strong>，babel，eslint等工具的配置及使用。能使用和配置常用脚手架。</li>
                 <li>版本管理：熟悉git常用命令，有项目协同开发经验。</li>
                 <li>开放平台：熟悉微信小程序开发。</li>
-                <li>其他：熟悉animejs、animation.css等动画库；熟练使用sass编写BEM规范样式代码。了解node、java等后端语言。</li>
+                <li>其他：熟悉<strong>animejs</strong>、<strong>animation.css</strong>等动画库；熟练使用<strong>sass</strong>编写BEM规范样式代码。了解node、java等后端语言。</li>
             </ul>
             <div class="charts"></div>
         </div>
