--- a/resume/index.html
+++ b/resume/index.html
@@ -57,7 +57,7 @@
             <h3>YD-英语口语（小程序端）</h3>
             <p class="content">
                 这是一款英语短视频的在线教育应用的<strong>微信小程序</strong>端。<br/>
-                作为App的引流端，仅包含了关键的功能服务，首先通过<code>openid</code>和<code>session_key</code>管理用户的登录状态，并通过请求授权获取用户手机号与App端的账户进行关联和同步。主要页面包含Feed流、用户信息、视频详情、评论、打卡、单词卡片等。其他功能还包括有字幕和关键单词的同步管理、新单词突出显示并可添加云收藏和在字幕内定位、通过调用微信平台原生接口，实现音频评论和口语发音评分等。
+                作为App的引流端，仅包含了关键的功能服务，首先通过<code>openid</code>和<code>session_key</code>管理用户的登录状态，并通过请求授权获取用户手机号与App端的账户进行关联和同步。主要页面包含Feed流、用户信息、视频详情、评论、打卡、单词卡片等。其他功能还包括有字幕和关键单词的同步管理、新单词突出显示并可添加云收藏和在字幕内定位、调用微信平台原生接口，实现音频评论和口语发音评分等。
             </p>
         </div>
     </section>
