--- a/resume/index.html
+++ b/resume/index.html
@@ -94,7 +94,7 @@
                     前端框架：熟练应用<strong>vue</strong>及相关生态，了解虚拟DOM、数据动态响应、生命周期等关键原理，能开发高通用的vue组件；熟悉react+<strong>typescript</strong>组合开发。
                 </li>
                 <li>依赖工具：熟悉<strong>webpack</strong>，babel，eslint等工具的配置及使用。能使用和配置常用脚手架。</li>
-                <li>版本管理：熟悉git常用命令，有项目协同开发经验。</li>
+                <li>版本管理：熟悉git常用命令，有项目<strong>协同开发</strong>经验。</li>
                 <li>开放平台：熟悉微信小程序开发。</li>
                 <li>其他：熟悉<strong>animejs</strong>、<strong>animation.css</strong>等动画库；熟练使用<strong>sass</strong>编写BEM规范样式代码。了解node、java等后端语言。</li>
             </ul>
