--- a/resume/index.html
+++ b/resume/index.html
@@ -4,132 +4,149 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
-        content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no,viewport-fit=cover">
+          content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no,viewport-fit=cover">
     <title>喻衡深-web前端开发</title>
-    <script src="//at.alicdn.com/t/font_1685945_lb2r5jqn7h8.js"></script>
+    <script src="//at.alicdn.com/t/font_1685945_mzv3dz2bb9m.js"></script>
     <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
-    <div class="wrapper">
-        <div class="banner">
-        </div>
-        <section class="info">
-            <h1>
-                <svg class="icon">
-                    <use xlink:href="#icon-icon--"></use>
-                </svg>
-                个人信息
-            </h1>
-            <div style="position: relative">
-                <div class="pc" style="flex: 1;">
-                    <div class="info__item"><span>电话：18328075041</span><span>邮箱：<a
-                                href="mailto:hengshenyu@gmail.com">hengshenyu@gmail.com</a></span>
-                        <span>地址：四川自贡</span></div>
-                    <div class="info__item"><span>年龄：24岁</span><span>性别：男</span><span>求职方向：web前端开发</span></div>
-                </div>
-                <div class="mobile">
-                    <span>18328075041 | </span><span>hengshenyu@gmail.com | </span><span>四川自贡 | </span><span>24岁 |
-                    </span><span>男 | </span><span>Web前端开发</span>
-                </div>
-                <div class="avatar"></div>
-            </div>
-        </section>
-        <section class="experience">
-            <h1>
-                <svg class="icon">
-                    <use xlink:href="#icon-experience"></use>
-                </svg>
-                工作经历
-            </h1>
-            <div>
-                <h2><span class="inc">东海蓝帆（宁波）</span> - <span class="position">前端开发</span><span
-                        class="left">2018年10月-2019年6月</span>
-                </h2>
-
-                <h3>工作描述</h3>
-                <p class="content">
-                    配合设计师和项目经理，实现产品前端UI和交互逻辑的开发需求。
-                </p>
-                <h3>项目介绍</h3>
-                <h4>道云文件（PC端）</h4>
-                <p>
-                    这是一款基于<strong>vue</strong>、<strong>element-ui</strong>、<strong>axios</strong>、<strong>jsonwebtoken</strong>和<strong>webpack</strong>开发的企业文件管理和会议记录存储的后台应用。主要设计实现了文件组件树、全局对话、ContextMenu等组件。
-                </p>
-                <p>
-                    设计了完善的用户权限角色路由表，管理员可动态修改用户角色以管理权限，通过添加axios拦截器，为每次异步请求添加自定义auth头部信息。针对云端存储大体积的视频、音频或其他会议文件的需求，采用<code>blob slice</code>做文件分段上传和断点续传，并配合使用Promise做并发池优化上传体验。使用<code>babel-plugin-component</code>对element-ui做按需导入和<code>tree-shaking</code>，使用<code>dynamic import</code>对非首屏chunk做异步引入同时添加<code>prefetch</code>提升源文件加载速度。对公共文件使用CDN减少服务器负载。
-                </p>
-                <p>该项目的编写过程中，我对vue的使用逐渐熟练，并在对部分vue源码的debug中，加深了对其实现原理的理解。</p>
-                <h4>YD-英语口语（小程序端）</h4>
-                <p>
-                    这是一款英语短视频的在线教育应用的<strong>微信小程序</strong>端。
-                </p>
-                <p>
-                    作为App的引流端，仅包含了关键的功能服务，首先通过<code>openid</code>和<code>session_key</code>管理用户的登录状态，并通过请求授权获取用户手机号与App端的账户进行关联和同步。主要页面包含Feed流、用户信息、视频详情、评论、打卡、单词卡片等。其他功能还包括有字幕和关键单词的同步管理、新单词突出显示并可添加云收藏和在字幕内定位、调用微信平台原生接口，实现音频评论和口语发音评分等。
-                </p>
-            </div>
-        </section>
-        <section class="open">
-            <h1>
-                <svg class="icon">
-                    <use xlink:href="#icon-github"></use>
-                </svg>
-                开源项目及作品
-            </h1>
-            <div>
-                <h4>redux-music-widget <span class="left">2020年1月-2020年2月</span></h4>
-                <p>这是一款基于<strong>react</strong>和<strong>typescript</strong>的音乐播放组件，是我为个人博客所设计。</p>
-                <p>
-                    功能包含了歌词获取、播放控制、歌词控制等常用功能，并可通过拖动文件和外链两种方式进行播放。项目中大量使用<code>react hooks</code>，并将“拖动”，“隐藏”等副作用（特效）封装为自定义hooks。该项目是我对<code>react hooks</code>及其相关内容的实践，让我对hooks有了深刻的理解和应用。该项目同时也使用了<strong>animejs</strong>来管理动画，与<strong>animation.css</strong>配合使用，即可轻松编写出高质量的动画特效。
-                </p>
-                <p>
-                    项目地址：<a
-                        href="https://github.com/yuhengshen/react-music-widget">https://github.com/yuhengshen/react-music-widget</a>。
-                </p>
-                <h4>现代JavaScript教程 <span class="left">2020年3月-2020年3月</span></h4>
-                <p>
-                    参与了<a href="https://zh.javascript.info">《现代JavaScript教程》</a>的翻译。
-                </p>
-            </div>
-        </section>
-        <section class="skills">
-            <h1>
-                <svg class="icon">
-                    <use xlink:href="#icon-skill_entity"></use>
-                </svg>
-                掌握技能
-            </h1>
-            <div class="skills__wrapper">
-                <ul>
-                    <li>基础技能：熟练掌握ES6，HTML5，CSS3。对JS闭包、原型、回调、异步、面向对象有充分的认识，能依据设计稿精确还原页面，对前端优化有一定见解。</li>
-                    <li>
-                        前端框架：熟练应用<strong>vue</strong>及相关生态，了解虚拟DOM、数据动态响应、生命周期等关键原理，能开发高通用的vue组件；熟悉react+<strong>typescript</strong>组合开发。
-                    </li>
-                    <li>依赖工具：熟悉<strong>webpack</strong>，babel，eslint等工具的配置及使用。能使用和配置常用脚手架。</li>
-                    <li>版本管理：熟悉git常用命令，有项目<strong>协同开发</strong>经验。</li>
-                    <li>开放平台：熟悉微信小程序开发。</li>
-                    <li>其他：熟悉<strong>animejs</strong>、<strong>animation.css</strong>等动画库；熟练使用<strong>sass</strong>编写BEM规范样式代码。了解node、java等后端语言。
-                    </li>
-                </ul>
-                <div class="charts"></div>
-            </div>
-        </section>
-        <section>
-            <h1>
-                <svg class="icon">
-                    <use xlink:href="#icon-education"></use>
-                </svg>
-                教育经历
-            </h1>
-            <div>
-                <h2>西华大学 <span class="left">2014年7月-2018年7月</span></h2>
-                <p>汽车服务工程 本科 <span class="left">成都郫县</span></p>
-            </div>
-        </section>
-
+<div class="wrapper">
+    <div class="banner">
     </div>
-    <script src="https://cdn.bootcss.com/echarts/4.6.0/echarts.min.js"></script>
-    <script src="./index.js"></script>
+    <section class="info">
+        <h1>
+            <svg class="icon">
+                <use xlink:href="#icon-icon--"></use>
+            </svg>
+            个人信息
+        </h1>
+        <div style="position: relative">
+            <div class="pc" style="flex: 1;">
+                <div class="info__item"><span>电话：18328075041</span><span>邮箱：<a
+                        href="mailto:hengshenyu@gmail.com">hengshenyu@gmail.com</a></span>
+                    <span>地址：四川自贡</span></div>
+                <div class="info__item"><span>年龄：24岁</span><span>性别：男</span><span>求职方向：web前端开发</span></div>
+            </div>
+            <div class="mobile">
+                <span>18328075041 | </span><span>hengshenyu@gmail.com | </span><span>四川自贡 | </span><span>24岁 |
+                    </span><span>男 | </span><span>Web前端开发</span>
+            </div>
+            <div class="avatar"></div>
+        </div>
+    </section>
+    <section class="experience">
+        <h1>
+            <svg class="icon">
+                <use xlink:href="#icon-experience"></use>
+            </svg>
+            工作经历
+        </h1>
+        <div>
+            <h2><span class="inc">东海蓝帆（宁波）</span> - <span class="position">前端开发</span><span
+                    class="left">2018年10月-2019年6月</span>
+            </h2>
+            <h3>工作描述</h3>
+            <p class="content">
+                1. 参与需求评估，推动技术落地。<br/>
+                2. 搭建基础开发环境和脚手架，对业务组件进行封装。<br/>
+                3. 配合设计师和项目经理，实现其他产品前端UI和交互逻辑的开发需求。
+            </p>
+        </div>
+    </section>
+    <section>
+        <h1>
+            <svg class="icon">
+                <use xlink:href="#icon-xiangmu"></use>
+            </svg>
+            项目介绍
+        </h1>
+        <div>
+
+            <h4>Mando U8综合系统（PC端）</h4>
+            <!--                项目-->
+            <p>
+                项目介绍：综合型企业管理系统，设计企业资源管理，供应商质量管理，客户服务管理等。
+            </p>
+            <p>技术栈：vue，vuex，vue-router，element-ui，axios，jsonwebtoken，webpack，echarts。</p>
+            <p>我的工作：1. 设计系统的路由逻辑，自动注入<code>sidebar</code> 菜单。2. 实现路由和<code>button</code>级别权限管理。3. 接入通知和邮件系统，统一消息管理。4. 优化构件，提升资源加载速度。5. 其他功能页面编写。</p>
+            <!-- 项目-->
+            <h4>道云文件（PC端）</h4>
+            <p>项目介绍：帮助企业共享和管理文件的后台应用。</p>
+            <p>技术栈：vue，vuex，vue-router，iview。</p>
+            <p>我的工作：1. 实现基本的UI和逻辑交互。2. 优化文件传输逻辑，采用并发、异步上传的方式，提升文件上传的速度。3. 编写可复用mixin、directive等共用模块。</p>
+            <h4>TONGUE-英语口语（小程序端）</h4>
+            <p>
+                项目介绍：一款英语短视频的在线教育应用。
+            </p>
+            <p>技术栈：小程序，Vant，iconfont。</p>
+            <p>
+                我的工作：1. 管理用户的登录状态，并与App端的进行关联和同步。2. 绘制主要页面，包含Feed流、用户信息、视频详情、评论、打卡、单词卡片等。3. 关键单词添加单词表并在字幕内定位。4. 调用微信平台原生接口，实现音频评论和口语发音评分等。
+            </p>
+        </div>
+    </section>
+    <section class="open">
+        <h1>
+            <svg class="icon">
+                <use xlink:href="#icon-github"></use>
+            </svg>
+            开源项目及作品
+        </h1>
+        <div>
+            <h4>redux-music-widget <span class="left">2020年1月-2020年2月</span></h4>
+            <p>这是一款基于<strong>react</strong>和<strong>typescript</strong>的音乐播放组件，是我为个人博客所设计。</p>
+            <p>
+                功能包含了歌词获取、播放控制、歌词控制等常用功能，并可通过拖动文件和外链两种方式进行播放。项目中大量使用<code>react hooks</code>，并将“拖动”，“隐藏”等副作用（特效）封装为自定义hooks。该项目是我对<code>react
+                hooks</code>及其相关内容的实践，让我对hooks有了深刻的理解和应用。该项目同时也使用了<strong>animejs</strong>来管理动画，与<strong>animation.css</strong>配合使用，即可轻松编写出高质量的动画特效。
+            </p>
+            <p>
+                项目地址：<a
+                    href="https://github.com/yuhengshen/react-music-widget">https://github.com/yuhengshen/react-music-widget</a>。
+            </p>
+            <h4>现代JavaScript教程 <span class="left">2020年3月-2020年3月</span></h4>
+            <p>
+                参与了<a href="https://zh.javascript.info">《现代JavaScript教程》</a>的翻译。
+            </p>
+        </div>
+    </section>
+    <section class="skills">
+        <h1>
+            <svg class="icon">
+                <use xlink:href="#icon-skill_entity"></use>
+            </svg>
+            掌握技能
+        </h1>
+        <div class="skills__wrapper">
+            <ul>
+                <li>基础技能：熟练掌握ES6，HTML5，CSS3。对JS闭包、原型、回调、异步、面向对象有充分的认识，能依据设计稿精确还原页面，对前端优化有一定见解。</li>
+                <li>
+                    前端框架：熟练应用<strong>vue</strong>及相关生态，了解虚拟DOM、数据动态响应、生命周期等关键原理，能开发高通用的vue组件；熟悉react+<strong>typescript</strong>组合开发。
+                </li>
+                <li>依赖工具：熟悉<strong>webpack</strong>，babel，eslint等工具的配置及使用。能使用和配置常用脚手架。</li>
+                <li>版本管理：熟悉git常用命令，有项目<strong>协同开发</strong>经验。</li>
+                <li>开放平台：熟悉微信小程序开发。</li>
+                <li>其他：熟悉<strong>animejs</strong>、<strong>animation.css</strong>等动画库；熟练使用<strong>sass</strong>编写BEM规范样式代码。了解node、java等后端语言。
+                </li>
+            </ul>
+            <div class="charts"></div>
+        </div>
+    </section>
+    <section>
+        <h1>
+            <svg class="icon">
+                <use xlink:href="#icon-education"></use>
+            </svg>
+            教育经历
+        </h1>
+        <div>
+            <h2>西华大学 <span class="left">2014年7月-2018年7月</span></h2>
+            <p>汽车服务工程 本科 <span class="left">成都郫县</span></p>
+        </div>
+    </section>
+
+</div>
+<script src="https://cdn.bootcss.com/echarts/4.6.0/echarts.min.js"></script>
+<script src="./index.js"></script>
 </body>
 
 </html>
