--- a/resume/index.html
+++ b/resume/index.html
@@ -66,10 +66,11 @@
             <h4>Mando U8综合系统（PC端）</h4>
             <!--                项目-->
             <p>
-                项目介绍：综合型企业管理系统，设计企业资源管理，供应商质量管理，客户服务管理等。
+                项目介绍：综合型企业管理系统，包括企业资源管理，供应商质量管理，客户服务管理，文件共享等。
             </p>
             <p>技术栈：vue，vuex，vue-router，element-ui，axios，jsonwebtoken，webpack，echarts。</p>
-            <p>我的工作：1. 设计系统的路由逻辑，自动注入<code>sidebar</code> 菜单。2. 实现路由和<code>button</code>级别权限管理。3. 接入通知和邮件系统，统一消息管理。4. 优化构件，提升资源加载速度。5. 其他功能页面编写。</p>
+            <p>我的工作：1. 设计系统的路由逻辑，自动注入sidebar 菜单。2. 实现路由和 button 级别权限管理。3. 接入通知和邮件系统，统一消息管理。4. 优化构件，提升资源加载速度。5.
+                其他功能页面编写。</p>
             <!-- 项目-->
             <h4>道云文件（PC端）</h4>
             <p>项目介绍：帮助企业共享和管理文件的后台应用。</p>
@@ -81,7 +82,8 @@
             </p>
             <p>技术栈：小程序，Vant，iconfont。</p>
             <p>
-                我的工作：1. 管理用户的登录状态，并与App端的进行关联和同步。2. 绘制主要页面，包含Feed流、用户信息、视频详情、评论、打卡、单词卡片等。3. 关键单词添加单词表并在字幕内定位。4. 调用微信平台原生接口，实现音频评论和口语发音评分等。
+                我的工作：1. 管理用户的登录状态，并与App端的进行关联和同步。2. 绘制主要页面，包含Feed流、用户信息、视频详情、评论、打卡、单词卡片等。3. 关键单词添加单词表并在字幕内定位。4.
+                调用微信平台原生接口，实现音频评论和口语发音评分等。
             </p>
         </div>
     </section>
@@ -94,10 +96,11 @@
         </h1>
         <div>
             <h4>redux-music-widget <span class="left">2020年1月-2020年2月</span></h4>
-            <p>这是一款基于<strong>react</strong>和<strong>typescript</strong>的音乐播放组件，是我为个人博客所设计。</p>
+            <p>这是一款基于<strong>react</strong>和<strong>typescript</strong>的音乐播放组件。</p>
             <p>
-                功能包含了歌词获取、播放控制、歌词控制等常用功能，并可通过拖动文件和外链两种方式进行播放。项目中大量使用<code>react hooks</code>，并将“拖动”，“隐藏”等副作用（特效）封装为自定义hooks。该项目是我对<code>react
-                hooks</code>及其相关内容的实践，让我对hooks有了深刻的理解和应用。该项目同时也使用了<strong>animejs</strong>来管理动画，与<strong>animation.css</strong>配合使用，即可轻松编写出高质量的动画特效。
+                功能包含了歌词获取、播放控制、歌词控制等常用功能。项目中大量使用 react hooks。
+            </p>
+            <p>该项目是我对react hooks及其相关内容的实践，让我对hooks有了深刻的理解和应用。该项目同时也使用了<strong>animejs</strong>来管理动画，与<strong>animation.css</strong>配合使用，即可编写出高质量的动画特效。
             </p>
             <p>
                 项目地址：<a
