--- a/resume/index.html
+++ b/resume/index.html
@@ -4,150 +4,173 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
-          content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no,viewport-fit=cover">
+        content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no,viewport-fit=cover">
     <title>喻衡深-web前端开发</title>
     <script src="//at.alicdn.com/t/font_1685945_mzv3dz2bb9m.js"></script>
     <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
-<div class="wrapper">
-    <div class="banner">
-    </div>
-    <section class="info">
-        <h1>
-            <svg class="icon">
-                <use xlink:href="#icon-icon--"></use>
-            </svg>
-            个人信息
-        </h1>
-        <div style="position: relative">
-            <div class="pc" style="flex: 1;">
-                <div class="info__item"><span>电话：18328075041</span><span>邮箱：<a
-                        href="mailto:hengshenyu@gmail.com">hengshenyu@gmail.com</a></span>
-                    <span>地址：四川自贡</span></div>
-                <div class="info__item"><span>年龄：24岁</span><span>性别：男</span><span>求职方向：web前端开发</span></div>
-            </div>
-            <div class="mobile">
-                <span>18328075041 | </span><span>hengshenyu@gmail.com | </span><span>四川自贡 | </span><span>24岁 |
+    <div class="wrapper">
+        <div class="banner">
+        </div>
+        <section class="info">
+            <h1>
+                <svg class="icon">
+                    <use xlink:href="#icon-icon--"></use>
+                </svg>
+                个人信息
+            </h1>
+            <div style="position: relative">
+                <div class="pc" style="flex: 1;">
+                    <div class="info__item"><span>电话：18328075041</span><span>邮箱：<a
+                                href="mailto:hengshenyu@gmail.com">hengshenyu@gmail.com</a></span>
+                        <span>地址：四川自贡</span></div>
+                    <div class="info__item"><span>年龄：24岁</span><span>性别：男</span><span>求职方向：web前端开发</span></div>
+                </div>
+                <div class="mobile">
+                    <span>18328075041 | </span><span>hengshenyu@gmail.com | </span><span>四川自贡 | </span><span>24岁 |
                     </span><span>男 | </span><span>Web前端开发</span>
+                </div>
+                <div class="avatar"></div>
             </div>
-            <div class="avatar"></div>
-        </div>
-    </section>
+        </section>
 
-    <section class="skills">
-        <h1>
-            <svg class="icon">
-                <use xlink:href="#icon-skill_entity"></use>
-            </svg>
-            掌握技能
-        </h1>
-        <div class="skills__wrapper">
-            <ul>
-                <li>基础技能：熟练掌握ES6，HTML5，CSS3，SASS。对JS闭包、原型、回调、异步、面向对象有充分的认识，能依据设计稿精确还原页面，对前端优化有一定见解。</li>
-                <li>
-                    前端框架：熟练应用vue及相关生态，了解虚拟DOM、数据动态响应、生命周期等关键原理，能开发高通用的vue组件；了解react+typescript组合开发。
-                </li>
-                <li>依赖工具：熟悉webpack，babel，eslint等工具的配置及使用。能使用和配置常用脚手架。</li>
-                <li>版本管理：熟悉git常用命令，有项目协同开发经验。</li>
-                <li>开放平台：熟悉微信小程序开发，了解hybrid开发。</li>
-                <li>其他：熟悉animejs、animation.css等动画库。了解node、java等后端语言。
-                </li>
-            </ul>
-        </div>
-    </section>
+        <section class="skills">
+            <h1>
+                <svg class="icon">
+                    <use xlink:href="#icon-skill_entity"></use>
+                </svg>
+                掌握技能
+            </h1>
+            <div class="skills__wrapper">
+                <ul>
+                    <li>基础技能：熟练掌握ES6，HTML5，CSS3，SASS。对JS闭包、原型、回调、异步、面向对象有充分的认识，能依据设计稿精确还原页面，对前端优化有一定见解。</li>
+                    <li>
+                        前端框架：熟练应用vue及相关生态，了解虚拟DOM、数据动态响应、生命周期等关键原理，能开发高通用的vue组件；了解react+typescript组合开发。
+                    </li>
+                    <li>依赖工具：熟悉webpack，babel，eslint等工具的配置及使用。能使用和配置常用脚手架。</li>
+                    <li>版本管理：熟悉git常用命令，有项目协同开发经验。</li>
+                    <li>开放平台：熟悉微信小程序开发，了解hybrid开发。</li>
+                    <li>其他：熟悉animejs、animation.css等动画库。了解node、java等后端语言。
+                    </li>
+                </ul>
+            </div>
+        </section>
 
-    <section class="experience">
-        <h1>
-            <svg class="icon">
-                <use xlink:href="#icon-experience"></use>
-            </svg>
-            工作经历
-        </h1>
-        <div>
-            <h3><span class="inc">东海蓝帆（宁波）</span> - <span class="position">前端开发</span><span
-                    class="right">2018年10月-2019年6月</span>
-            </h3>
-            <h4>工作描述</h4>
-            <p class="content">
-                1. 参与需求评估，推动技术落地。<br/>
-                2. 搭建基础开发环境和脚手架，对业务组件进行封装。<br/>
-                3. 配合设计师和项目经理，实现其他产品前端UI和交互逻辑的开发需求。
-            </p>
-        </div>
-    </section>
-    <section>
-        <h1>
-            <svg class="icon">
-                <use xlink:href="#icon-xiangmu"></use>
-            </svg>
-            项目介绍
-        </h1>
-        <div>
+        <section class="experience">
+            <h1>
+                <svg class="icon">
+                    <use xlink:href="#icon-experience"></use>
+                </svg>
+                工作经历
+            </h1>
+            <div>
+                <h3><span class="inc">东海蓝帆（宁波）</span> - <span class="position">前端开发</span><span
+                        class="right">2018年10月-2019年6月</span>
+                </h3>
+                <h4>工作描述</h4>
+                <p class="content">
+                    <ol>
+                        <li>参与需求评估，推动技术落地。</li>
+                        <li>搭建基础开发环境和脚手架，对业务组件进行封装。</li>
+                        <li>配合设计师和项目经理，实现其他产品前端UI和交互逻辑的开发需求。</li>
+                    </ol>
+                </p>
+            </div>
+        </section>
+        <section>
+            <h1>
+                <svg class="icon">
+                    <use xlink:href="#icon-xiangmu"></use>
+                </svg>
+                项目介绍
+            </h1>
+            <div>
+                <!--项目-->
+                <h4>Mando U8综合系统（PC端）</h4>
+                <p>
+                    项目介绍：为万都公司开发的综合型企业管理系统，通过整合多个系统，简化业务流程，提升办公效率。包括企业资源管理，供应商质量管理，客户服务管理，内部文件共享等多个系统模块。
+                </p>
+                <p>技术栈：vue，vuex，vue-router，element-ui，axios，jsonwebtoken，webpack，echarts。</p>
+                <p>我的工作：
+                    <ol>
+                        <li>设计系统的路由逻辑，自动注入新增路由到sidebar菜单。</li>
+                        <li>实现路由和 button 级别权限管理。</li>
+                        <li>使用echarts对质量、销售、供应商等相关数据做可视化展示。</li>
+                        <li>使用splitChunk配合多个html-webpack-plugin实例做多入口构建，提取共用库单独管理缓存，提升页面资源的加载速度。</li>
+                        <li>接入通知和邮件系统，统一消息管理。</li>
+                        <li>文件管理等其他功能页面编写。</li>
+                    </ol>
+                </p>
+                <!-- 项目-->
+                <h4>道云文件（PC端）</h4>
+                <p>项目介绍：重构公司内部台网盘应用，主要用于内部文件共享和管理。</p>
+                <p>技术栈：vue，vuex，vue-router，iView。</p>
+                <p>我的工作：
+                    <ol>
+                        <li>优化文件传输逻辑，采用Promise和文件分片技术，并发和异步上传的大文件，提升文件上传的效率。</li>
+                        <li>重新实现系统登录、右键菜单、文件权限、文件预览等基本的UI和逻辑交互。</li>
+                        <li>编写文件归纳、文件标签、文件属性等可复用mixin、directive共用模块。</li>
+                    </ol>
+                </p>
+                <div class="open print-break-before"></div>
+                <h4>TONGUE-英语口语（小程序端）</h4>
+                <p>
+                    项目介绍：一款英语短视频的在线教育应用，通过结合用户的兴趣、水平等因素个性化推荐视频和学习内容，让用户学英语的过程变得有趣、高效，更容易学会英语。。
+                </p>
+                <p>技术栈：小程序，vant，iconfont。</p>
+                <p>
+                    我的工作：
+                    <ol>
+                        <li>使用UnionID管理用户的登录状态，并与App端的进行关联和同步。</li>
+                        <li>绘制主要页面，包含推送流、用户信息、视频详情、评论、打卡、单词卡片等。</li>
+                        <li>陌生单词添加到单词表，并可在字幕内定位，重复观看短视频。</li>
+                        <li>调用微信平台接口，实现音频评论和口语发音评分等。</li>
+                    </ol>
+                </p>
+            </div>
+        </section>
+        <section>
+            <h1>
+                <svg class="icon">
+                    <use xlink:href="#icon-github"></use>
+                </svg>
+                开源项目及作品
+            </h1>
+            <div>
+                <h4>redux-music-widget <span class="right">2020年1月-2020年2月</span></h4>
+                <p>这是一款基于react和typescript的音乐播放组件。</p>
+                <p>
+                    功能包含了歌词获取、播放控制、歌词控制等常用功能。项目中大量使用 react hooks。
+                </p>
+                <p>该项目是我对react hooks及其相关内容的实践，让我对hooks有了深刻的理解和应用。该项目同时也使用了animejs来管理动画，与animation.css配合使用，即可编写出高质量的动画特效。
+                </p>
+                <p>
+                    项目地址：<a
+                        href="https://github.com/yuhengshen/react-music-widget">https://github.com/yuhengshen/react-music-widget</a>。
+                </p>
+                <h4>现代JavaScript教程 <span class="right">2020年3月-2020年3月</span></h4>
+                <p>
+                    参与了<a href="https://zh.javascript.info">《现代JavaScript教程》</a>的翻译。
+                </p>
+            </div>
+        </section>
+        <section>
+            <h1>
+                <svg class="icon">
+                    <use xlink:href="#icon-education"></use>
+                </svg>
+                教育经历
+            </h1>
+            <div>
+                <h3>西华大学 <span class="right">2014年7月-2018年7月</span></h3>
+                <p>汽车服务工程 本科 <span class="right">成都郫县</span></p>
+            </div>
+        </section>
 
-            <h4>Mando U8综合系统（PC端）</h4>
-            <!--项目-->
-            <p>
-                项目介绍：综合型企业管理系统，包括企业资源管理，供应商质量管理，客户服务管理，文件共享等。
-            </p>
-            <p>技术栈：vue，vuex，vue-router，element-ui，axios，jsonwebtoken，webpack，echarts。</p>
-            <p>我的工作：1. 设计系统的路由逻辑，自动注入sidebar 菜单。2. 实现路由和 button 级别权限管理。3. 接入通知和邮件系统，统一消息管理。4. 优化构建工具，提升资源加载速度。5. 其他功能页面编写。</p>
-            <!-- 项目-->
-            <h4>道云文件（PC端）</h4>
-            <p>项目介绍：帮助企业共享和下载文件的后台网盘应用。</p>
-            <p>技术栈：vue，vuex，vue-router，iview。</p>
-            <p>我的工作：1. 实现基本的UI和逻辑交互。2. 优化文件传输逻辑，采用Promise并发和异步上传的方式，提升文件上传的速度。3. 编写可复用mixin、directive等共用模块。</p>
-            <h4>TONGUE-英语口语（小程序端）</h4>
-            <p>
-                项目介绍：一款英语短视频的在线教育应用。
-            </p>
-            <p>技术栈：小程序，Vant，iconfont。</p>
-            <p>
-                我的工作：1. 管理用户的登录状态，并与App端的进行关联和同步。2. 绘制主要页面，包含Feed流、用户信息、视频详情、评论、打卡、单词卡片等。3. 关键单词添加单词表并在字幕内定位。4. 调用微信平台原生接口，实现音频评论和口语发音评分等。
-            </p>
-        </div>
-    </section>
-    <section class="open print-break-before">
-        <h1>
-            <svg class="icon">
-                <use xlink:href="#icon-github"></use>
-            </svg>
-            开源项目及作品
-        </h1>
-        <div>
-            <h4>redux-music-widget <span class="right">2020年1月-2020年2月</span></h4>
-            <p>这是一款基于react和typescript的音乐播放组件。</p>
-            <p>
-                功能包含了歌词获取、播放控制、歌词控制等常用功能。项目中大量使用 react hooks。
-            </p>
-            <p>该项目是我对react hooks及其相关内容的实践，让我对hooks有了深刻的理解和应用。该项目同时也使用了animejs来管理动画，与animation.css配合使用，即可编写出高质量的动画特效。
-            </p>
-            <p>
-                项目地址：<a
-                    href="https://github.com/yuhengshen/react-music-widget">https://github.com/yuhengshen/react-music-widget</a>。
-            </p>
-            <h4>现代JavaScript教程 <span class="right">2020年3月-2020年3月</span></h4>
-            <p>
-                参与了<a href="https://zh.javascript.info">《现代JavaScript教程》</a>的翻译。
-            </p>
-        </div>
-    </section>
-    <section>
-        <h1>
-            <svg class="icon">
-                <use xlink:href="#icon-education"></use>
-            </svg>
-            教育经历
-        </h1>
-        <div>
-            <h3>西华大学 <span class="right">2014年7月-2018年7月</span></h3>
-            <p>汽车服务工程 本科 <span class="right">成都郫县</span></p>
-        </div>
-    </section>
-
-</div>
-<script src="./index.js"></script>
+    </div>
+    <script src="./index.js"></script>
 </body>
 
 </html>
