--- a/resume/index.html
+++ b/resume/index.html
@@ -25,7 +25,7 @@
                 <div class="pc" style="flex: 1;">
                     <div class="info__item"><span>电话：18328075041</span><span>邮箱：<a
                                 href="mailto:hengshenyu@gmail.com">hengshenyu@gmail.com</a></span>
-                        <span>地址：四川自贡</span></div>
+                        <span>地址：成都高新区</span></div>
                     <div class="info__item"><span>年龄：24岁</span><span>性别：男</span><span>求职方向：web前端开发</span></div>
                 </div>
                 <div class="mobile">
