--- a/resume/index.html
+++ b/resume/index.html
@@ -22,15 +22,11 @@
                 个人信息
             </h1>
             <div style="position: relative">
-                <div class="pc" style="flex: 1;">
-                    <div class="info__item"><span>电话：18328075041</span><span>邮箱：<a
-                                href="mailto:hengshenyu@gmail.com">hengshenyu@gmail.com</a></span>
-                        <span>地址：成都高新区</span></div>
-                    <div class="info__item"><span>年龄：24岁</span><span>性别：男</span><span>求职方向：web前端开发</span></div>
-                </div>
-                <div class="mobile">
-                    <span>18328075041 | </span><span>hengshenyu@gmail.com | </span><span>四川自贡 | </span><span>24岁 |
-                    </span><span>男 | </span><span>Web前端开发</span>
+                <div class="info__column-wrapper">
+                    <div class="info__column"><span>姓名：喻衡深</span><span>年龄：24岁</span></div>
+                    <div class="info__column"><span>电话：18328075041</span><span>地址：成都高新区</span></div>
+                    <div class="info__column"><span>邮箱：<a
+                        href="mailto:hengshenyu@gmail.com">hengshenyu@gmail.com</a></span><span>求职方向：web前端开发</span></div>
                 </div>
                 <div class="avatar"></div>
             </div>
